promeni mi ovo na admin panelu Water Service Admin u La Fantana WHS admin panel

--- a/web-admin/package.json
+++ b/web-admin/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "water-service-web-admin",
+  "name": "lafantana-whs-admin",
   "version": "1.0.0",
   "private": true,
   "scripts": {
