sad za mob app. serviser kad pokrene app, mobilna aplikacija ako ima update treba da se azurira pre logovanja

--- a/app.json
+++ b/app.json
@@ -13,6 +13,14 @@
       "resizeMode": "contain",
       "backgroundColor": "#3B82F6"
     },
+    "updates": {
+      "enabled": true,
+      "checkAutomatically": "ON_LOAD",
+      "fallbackToCacheTimeout": 0
+    },
+    "runtimeVersion": {
+      "policy": "appVersion"
+    },
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.lafantana.whs"
