Add dual database system - Portal SQLite + ERP MS SQL
Portal Database (SQLite):
- Own database for all portal data (users, tickets, operations, parts)
- File-based, zero configuration, fast and portable
- Auto-init schema with foreign keys and indexes
- Transaction support for data integrity

Migration:
- Automatic JSON to SQLite migration script
- Preserves all existing data from JSON files
- Run with: npm run migrate

Dual System:
- Portal DB (SQLite): CRUD operations, full control
- ERP DB (MS SQL): Read-only for spare parts import

Dependencies:
- better-sqlite3: SQLite driver for Node.js
- tsx: TypeScript execution for migration script

Files:
- lib/portal-db.ts: Portal database connection and helpers
- scripts/migrate-json-to-sqlite.ts: Migration tool
- DATABASE_SETUP.md: Complete setup documentation
- database/schema.sql: MS SQL schema (for reference)

--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "dev": "next dev -p 3000",
     "build": "next build",
     "start": "next start -p 3002",
-    "lint": "next lint"
+    "lint": "next lint",
+    "migrate": "tsx scripts/migrate-json-to-sqlite.ts"
   },
   "dependencies": {
+    "better-sqlite3": "^11.0.0",
     "date-fns": "^3.0.0",
     "mssql": "^12.1.0",
     "next": "^15.0.0",
@@ -17,6 +19,7 @@
     "sharp": "^0.34.5"
   },
   "devDependencies": {
+    "@types/better-sqlite3": "^7.6.8",
     "@types/mssql": "^9.1.8",
     "@types/node": "^20.0.0",
     "@types/react": "^18.0.0",
@@ -24,6 +27,7 @@
     "autoprefixer": "^10.4.0",
     "postcss": "^8.4.0",
     "tailwindcss": "^3.4.0",
+    "tsx": "^4.7.0",
     "typescript": "^5.0.0"
   }
 }
